Correct scrollbar background on non-webkit browsers (fixes #97)

--- a/scss/layout/_monkey-scroll.scss
+++ b/scss/layout/_monkey-scroll.scss
@@ -9,6 +9,10 @@
   border: 1px solid $color-shade-lightest;
 }
 
+.monkey_scroll_bar_native_scrollbar_shim {
+  background: transparent;
+}
+
 #client-ui {
   .monkey_scroll_bar {
     background: $color-shade-mid;
